<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EHentaiApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_prev">prev</string>
    <string name="action_next">next</string>
    <string name="action_update">update</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_subscribe">Subscribe</string>
    <string name="menu_item_clear_memory_cache">Clear memory cache</string>
    <string name="menu_item_clear_disc_cache">Clear disc cache</string>
    <string name="title_activity_home_page">HomePageActivity</string>
    <string name="title_activity_comin_page">CominPageActivity</string>
    <string name="title_activity_vertical_view_pager">VerticalViewPagerActivity</string>
    <string name="title_activity_scroll">ScrollActivity</string>
    <string name="action_favorite">favorite</string>
    <string name="action_filter">filter</string>
    <string name="title_activity_main_preference">MainPreference</string>
    <string name="pref_cachedir">cachedir</string>
    <string name="search_hint">Search Keywords</string>
    <string name="text_filter">Option Filter</string>
    <string name="retry">retry</string>
    <string name="title_activity_tag_search">TagSearchActivity</string>

</resources>
